--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "@expo/react-native-action-sheet": "^3.9.0",
     "@firebase/app": "^0.6.28",
     "@firebase/auth": "^0.16.8",
+    "@firebase/database": "^0.10.9",
     "@firebase/firestore": "^2.3.8",
     "@firebase/storage": "^0.5.6",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "expo": "~42.0.1",
+    "expo-app-loading": "^1.1.2",
     "expo-camera": "^11.2.2",
     "expo-image-picker": "~10.2.2",
     "expo-location": "~12.1.2",
+    "expo-media-library": "~12.1.2",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -30,6 +33,9 @@
     "react-native-maps": "0.28.0",
     "react-native-multiple-select-list": "^1.0.4",
     "react-native-screens": "^3.4.0",
+    "react-native-share": "^7.0.0",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-view-shot": "^3.1.2",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
